--- a/styles/primary.css
+++ b/styles/primary.css
@@ -6,21 +6,23 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {d
 /* -------------------- */
 
 * { box-sizing: border-box; font-family: sans-serif; }
-*::selection { background: #F2CA00; color: #0F171F; }
-*::-moz-selection { background: #F2CA00; color: #0F171F; }
+*::selection { background: #1D2625; color: #F7F6EB; }
+*::-moz-selection { background: #1D2625; color: #F7F6EB; }
 
 body {
     background: #F7F6EB;
     color: #1D2625;
-    font-family: sans-serif;
-    font-size: 20px;
+    font-family: Catamaran, sans-serif;
+    font-size: 16px;
     line-height: 1.5;
-    padding: 48px 48px 48px 72px;
+    padding: 60px;
     max-width: 1128px;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-weight: bold;
+    color: #BF0040;
+    font-size: 24px;
+    font-weight: 900;
     margin-top: 24px;
 }
 
