--- a/styles/primary.css
+++ b/styles/primary.css
@@ -31,6 +31,7 @@ h1 {
 
 h2 {
     font-family: 'EB Garamond', serif;
+    font-size: 24px;
     font-style: italic;
     font-weight: 400;
     margin: 0;
