--- a/styles/primary.css
+++ b/styles/primary.css
@@ -6,17 +6,16 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {d
 /* -------------------- */
 
 * { box-sizing: border-box; font-family: sans-serif; }
-*::selection { background: #1D2625; color: #F7F6EB; }
-*::-moz-selection { background: #1D2625; color: #F7F6EB; }
+*::selection { background: #192625; color: #F7F6EB; }
+*::-moz-selection { background: #192625; color: #F7F6EB; }
 
 body {
-    background: #F7F6EB;
+    background: #1D2625;
     color: #1D2625;
-    font-family: Catamaran, sans-serif;
-    font-size: 16px;
+    font-family: 'Noto Sans JP', sans-serif;
+    font-size: 18px;
     line-height: 1.5;
-    padding: 24px;
-    max-width: 1128px;
+    padding: 12px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,7 +31,7 @@ h1 {
 
 header h2 {
     color: #1D2625;
-    font-family: 'EB Garamond', serif;
+    font-family: 'Caveat', serif;
     font-size: 24px;
     font-style: italic;
     font-weight: 400;
@@ -46,7 +45,7 @@ h2 {
 }
 
 h6 {
-    font-size: 20px;
+    font-size: 21px;
     font-weight: 700;
 }
 
@@ -56,8 +55,15 @@ p {margin-top: 24px;}
 
 a {color:#208060;}
 
-ul.features {list-style: square; margin: 24px;}
+ul.product-features { font-size: 15px; list-style: square; margin: 24px; }
 
 footer { margin-top: 24px; }
 small { color: #9E4F34; font-size: 12px;}
 small img {margin-top: -3px; padding-right: 6px; vertical-align: middle;}
+
+.wrapper {
+    background: #F7F6EB;
+    margin: 0 auto;
+    padding: 24px;
+    max-width: 600px;
+}
