--- a/styles/primary.css
+++ b/styles/primary.css
@@ -25,8 +25,14 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
     color: #BF0040;
+    text-transform: uppercase;
     font-size: 36px;
     font-weight: 900;
+}
+
+header {
+    text-align: center;
+    margin: 12px 0 24px;
 }
 
 header h2 {
@@ -66,4 +72,38 @@ small img {margin-top: -3px; padding-right: 6px; vertical-align: middle;}
     margin: 0 auto;
     padding: 24px;
     max-width: 600px;
+}
+
+article {
+    margin-top: 48px;
+    display: block;
+}
+
+a.btn-primary {
+    background: #BF0040;
+    border-radius: 3px;
+    color: #F7F6EB;
+    display: inline-block;
+    font-size: 15px;
+    font-weight: 700;
+    letter-spacing: .06em;
+    padding: 12px 18px;
+    text-transform: uppercase;
+}
+
+a.btn-primary:hover {
+    background: #611837;
+    color: #FFF;
+    cursor: pointer;
+}
+
+a.btn-secondary {
+    margin-left: 12px;
+    font-weight: 500;
+}
+
+a.btn-secondary:hover {
+    text-decoration: underline;
+    color: #1D2625;
+    cursor: pointer;
 }
